--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    
 
     <title><%= content_for?(:title) ? yield(:title) : "DFMovil" %></title>
 
@@ -40,9 +42,9 @@
           <!--<li><a href="#">Particulares</a></li>-->
           <li><%= link_to 'Particulares', particulares_path %></li>
           <!--<li><a href="#">Sitios de Taxi</a></li>-->
-          <li><%= link_to 'Sitios de Taxis', taxis_path %></li>
+          <li><%= link_to 'Sitios de Taxis', sitios_path %></li>
          <!-- <li><a href="#">Servicios</a></li>-->
-          <li><%= link_to 'Servicios de Transporte Público', servicios_path %></li>
+          <li><%= link_to 'Servicios de Transporte Público', transportes_path %></li>
         </ul>
       </section>
   </nav>
