--- a/app/views/sitios/show.html.erb
+++ b/app/views/sitios/show.html.erb
@@ -2,6 +2,8 @@
 
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
+
 <p>
   <strong>Nombrebase:</strong>
   <%= @sitio.NombreBase %>
@@ -23,8 +25,8 @@
 </p>
 
 
-<%= link_to 'Edit', edit_sitio_path(@sitio) %> |
-<%= link_to 'Back', sitios_path %>
+<%= link_to 'Edit', edit_sitio_path(@sitio),class:'button' %> 
+<%= link_to 'Back', sitios_path,class:'button' %>
 
 <div style='width: 800px;'>
   <div id="geolocation" style='width: 800px; height: 400px;'><h1></h1></div>
@@ -45,3 +47,5 @@ function displayOnMap(position){
   handler.map.centerOn(marker);
 };
 </script>
+
+
