--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,68 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Inicio</title>
+    <meta charset="utf-8" />
+  </head>
+  <body style="background-image: url('assets/citynight.jpg'); position: relative; background-attachment: fixed; background-size: cover">
+    <!--div class="off-canvas-wrap" >
+      <div class="inner-wrap" >
+        <nav class="tab-bar">
+          <section class="left-small" >
+            <a class="left-off-canvas-toggle menu-icon" href="#" ><span></span></a>
+          </section>
+          <section class="middle tab-bar-section">
+            <h1>DFMóvil</h1>
+          </section>
+        </nav>
+        <aside class="left-off-canvas-menu" >
+          <ul class="off-canvas-list" >
+            <li><label>DFMóvil</label></li>
+            <li><a href="/particulares/index">Particulares</a></li>
+            <li><a href="#">Taxis</a></li>
+            <li><a href="#">Servicios</a></li>
+          </ul>
+        </aside>
+        <section class="main-section"></section>
+        <a class="exit-off-canvas" ></a>
+      </div>
+    </div-->
+    <!--div class="row" style="height: 100vh; vertical-align: middle"-->
+      <div class="=small-6 large-4 columns" style="background-color: purple; opacity: .8; background-attachment: cover; height: 100vh" >
+        </br></br></br></br></br>
+        <h2 style="color: white" align="center">PARTICULARES</h2>
+        <div align="center" >
+          <div style="height: 250px; vertical-align: middle" >
+            <img src="assets/car.png" />
+          </div>
+          <a href="/taxi/search" class="button" align="center">SELECCIONAR</a>
+        </div>
+      </div>
+      <div class="small-6 large-4 columns" style="background-color: #FF66FF; opacity: .8; background-attachment: cover; height: 100vh" >
+        </br></br></br></br></br>
+        <h2 style="color: white" align="center">TAXIS</h2>
+        <div align="center">
+          <div style="height: 250px" >
+            <img src="assets/taxi.png" height="15" style="height: 200px" />
+          </div>
+          <a href="" class="button" align="center">SELECCIONAR</a>
+        </div>
+      </div>
+      <div class="small-6 large-4  columns" style="background-color: red; opacity: .8; background-attachment: cover; height: 100vh" >
+        </br></br></br></br></br>
+        <div style="opacity: 1" >
+          <h2 style="color: white" align="center">SERVICIOS</h2>
+          <div align="center">
+            <div style="height:250px" >
+              <img src="assets/bus.png" height="15" />
+            </div>
+            <a href="" class="button" align="center">SELECCIONAR</a>
+          </div>
+        </div>
+      </div>
+    <!--/div-->
+    <div style="text-align: center; color: white" >
+      <footer>Copyright&copy; by Laboratorio de Desarrollo de Aplicaciones Web</footer>
+    </body>
+    </div>
+</html>
