--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,46 +16,46 @@
   </head>
 
   <body>
-    <nav class="top-bar" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name">
-          <h1><a href="#">DF Movil</a></h1>
-        </li>
-         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-      </ul>
-
-      <section class="top-bar-section">
-        <!-- Right Nav Section
-        <ul class="right">
-          <li class="active"><a href="#">Right Button Active</a></li>
-          <li class="has-dropdown">
-            <a href="#">Right Button Dropdown</a>
-            <ul class="dropdown">
-              <li><a href="#">First link in dropdown</a></li>
-              <li class="active"><a href="#">Active link in dropdown</a></li>
-            </ul>
+    <div class="off-canvas-wrap" data-offcanvas>
+      <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">DF Movil</a></h1>
           </li>
-        </ul>-->
-
-        <!-- Left Nav Section -->
-        <ul class="left">
-          <!--<li><a href="#">Particulares</a></li>-->
-          <li><%= link_to 'Particulares', particulares_path %></li>
-          <!--<li><a href="#">Sitios de Taxi</a></li>-->
-          <li><%= link_to 'Sitios de Taxis', sitios_path %></li>
-         <!-- <li><a href="#">Servicios</a></li>-->
-          <li><%= link_to 'Servicios de Transporte Público', transportes_path %></li>
+           <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
-      </section>
-  </nav>
+
+        <section class="top-bar-section">
+          <!-- Right Nav Section
+          <ul class="right">
+            <li class="active"><a href="#">Right Button Active</a></li>
+            <li class="has-dropdown">
+              <a href="#">Right Button Dropdown</a>
+              <ul class="dropdown">
+                <li><a href="#">First link in dropdown</a></li>
+                <li class="active"><a href="#">Active link in dropdown</a></li>
+              </ul>
+            </li>
+          </ul>-->
+
+          <!-- Left Nav Section -->
+          <ul class="left">
+            <!--<li><a href="#">Particulares</a></li>-->
+            <li><%= link_to 'Particulares', particulares_path %></li>
+            <!--<li><a href="#">Sitios de Taxi</a></li>-->
+            <li><%= link_to 'Sitios de Taxis', sitios_path %></li>
+           <!-- <li><a href="#">Servicios</a></li>-->
+            <li><%= link_to 'Servicios de Transporte Público', transportes_path %></li>
+          </ul>
+        </section>
+    </nav>
+  </div>
 
 
     <div class="row">
-      <div class="columns large-6">
             <%= yield %>
-      </div>
-    </div>
+    </div-->
 
   </body>
 </html>
