Actualizacion de la vista

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
           <div style="height: 250px; vertical-align: middle" >
             <img src="assets/car.png" />
           </div>
-          <a href="/taxi/search" class="button" align="center">SELECCIONAR</a>
+          <a href="particulares" class="button" align="center">SELECCIONAR</a>
         </div>
       </div>
       <div class="small-6 large-4 columns" style="background-color: #FF66FF; opacity: .8; background-attachment: cover; height: 100vh" >
@@ -22,7 +22,7 @@
           <div style="height: 250px" >
             <img src="assets/taxi.png" height="15" style="height: 200px" />
           </div>
-          <a href="" class="button" align="center">SELECCIONAR</a>
+          <a href="taxis" class="button" align="center">SELECCIONAR</a>
         </div>
       </div>
       <div class="small-6 large-4  columns" style="background-color: red; opacity: .8; background-attachment: cover; height: 100vh" >
@@ -33,7 +33,7 @@
             <div style="height:250px" >
               <img src="assets/bus.png" height="15" />
             </div>
-            <a href="" class="button" align="center">SELECCIONAR</a>
+            <a href="transportes" class="button" align="center">SELECCIONAR</a>
           </div>
         </div>
       </div>
