--- a/app/views/transportes/index.html.erb
+++ b/app/views/transportes/index.html.erb
@@ -2,15 +2,16 @@
 
 <h1>Servicios de transporte</h1>
 <h3>Elige el servicio de transporte:</h3>
-  <a href="#" class="[tiny small medium large] [secondary alert success] [radius round] button split">Elige servicio               <span data-dropdown="drop"></span></a><br>
-  <ul id="drop" class="f-dropdown" data-dropdown-content>
-    <li><a href="#">Metrobus</a></li>
+  <a href="#" class="[tiny small medium large] [secondary alert success] [radius round] button split"data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="button dropdown">Elige servicio<span data-dropdown="drop"></span></a><br>
+  <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true">
+    <li><a href="/metrobus/show_metrobus">Metrobus</a></li>
     <li><a href="#">Metro</a></li>
     <li><a href="#">Tren ligero</a></li>
     <li><a href="#">Trolebús</a></li>
     <li><a href="#">Tren suburbano</a></li>
     <li><a href="#">RTP</a></li>
 </ul>
+
 
 <table>
   <thead>
